Changed more templates content , add class Post for new and class Tag for post tag , solved some fails and changed view logic and add CBV for this

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ django = "*"
 psycopg2 = "*"
 gdal = "*"
 django-leaflet = "*"
+django-authtools = "*"
+celery = "==4.1.1"
 
 [requires]
 python_version = "3.6"
